--- a/Client/index.html
+++ b/Client/index.html
@@ -23,5 +23,30 @@
         <script src="../backend/index.js" type="module"></script>
     </div>
     
+    <!-- Add Chat Interface -->
+    <div class="flex flex-col px-4 mt-4">
+        <div class="flex space-x-2">
+            <input 
+                type="text" 
+                id="chatInput" 
+                placeholder="Ask a question..." 
+                class="flex-1 px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+            >
+            <button 
+                id="sendButton"
+                class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition"
+            >
+                <span class="material-icons">send</span>
+            </button>
+        </div>
+        <div 
+            id="responseArea"
+            class="mt-3 p-3 min-h-[100px] max-h-[150px] overflow-y-auto border rounded-lg bg-gray-50"
+        >
+        </div>
+    </div>
+
+    <!-- Add ChatGPT Service Script -->
+    <script src="../Backend/chatService.js"></script>
 </body>
 </html>
