--- a/Client/index.html
+++ b/Client/index.html
@@ -46,7 +46,6 @@
         </div>
     </div>
 
-    <!-- Add ChatGPT Service Script -->
-    <script src="../Backend/chatService.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
