working web cam

--- a/Client/index.html
+++ b/Client/index.html
@@ -6,6 +6,7 @@
     <link href="output.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="socket.io.js"></script>
     <title>ProActive</title>
 </head>
 <body style="width: 20rem; height: 25rem;">
@@ -19,9 +20,7 @@
         </div>
     </div>    
 
-    <div class="timer-container">
-        <script src="./index.js" type="module"></script>
-    </div>
+    <div class="timer-container"></div>
     
     <!-- Add Chat Interface -->
     <div class="flex flex-col px-4 mt-4">
@@ -46,7 +45,7 @@
         </div>
     </div>
 
-    <!-- Add ChatGPT Service Script -->
-    <script src="../Backend/chatService.js"></script>
+    <script src="chatService.js" type="module"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
